<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="authors">Authors:</string>
    <string name="author_1">Ramin Baradari (original development)</string>
    <string name="author_2">Bastian Blywis (DES-SERT project and further development)</string>
	<string name="author_3">Denis Küchemann (porting / updating to Android 4.1+)</string>

	<string name="none"/>
	<string name="desc">Description</string>
	<string name="one2345">12345</string>
	<string name="content">content</string>
	<string name="sample_text">Sample output text with a lot of characters</string>
    <string name="sample_dev_version">1.2.3.4-dev</string>
    <string name="sample_version">APP VERSION 1.1.1</string>
    <string name="sample_lib_version">LIBRARY VERSION 1</string>

    <string name="tab_running">Running</string>
    <string name="tab_installed">Installed</string>
    <string name="tab_tools">Manage</string>

    <string name="notification_title">DES-SERT was started</string>
    <string name="notification_text">The DES-SERT app was started.</string>
	<string name="notification_text_daemon_running">Daemon running: %1$s</string>
    <string name="notification_ticker">DES-SERT was started</string>

    <string name="daemon_path">%1$s/dessert/%2$s/</string>
    <string name="daemon_name">Name:\t\t\t%1$s</string>
    <string name="daemon_version">Version:\t\t%1$s</string>
    <string name="daemon_pid">PID:\t\t\t\t%1$s</string>
    <string name="daemon_cli_port">CLI Port:\t%1$s</string>

    <string name="command_log">command.log</string>

    <string name="libcli_home">https://github.com/dparrish/libcli</string>
    <string name="uthash_home">https://github.com/troydhanson/uthash</string>
    <string name="dessert_home">http://www.des-testbed.net/DES-SERT</string>
    <string name="des_home">http://www.des-testbed.net</string>
    <string name="libpcap_home">http://www.tcpdump.org</string>
    <string name="setools_home">https://github.com/xmikos/setools-android</string>
    <string name="gpl_home">http://www.gnu.org/licenses/gpl.html</string>
    <string name="gpl">GNU General Public License v3</string>

    <string name="target_file_path">/sdcard/file.txt</string>
    <string name="target_directory_path">/sdcard</string>
    <string name="target_file_name">file.txt</string>

    <string name="not_set_name">&lt;NOT SET&gt; Name</string>
    <string name="not_set_version">&lt;NOT SET&gt; Version</string>
    <string name="not_set_pid">&lt;NOT SET&gt; PID</string>
    <string name="not_set_cli_port">&lt;NOT SET&gt; CLI Port</string>

	<string name="main_menu">Main menu</string>

	<string name="about">About</string>
	<string name="app_version">Application version:</string>
	<string name="lib_versions">Library versions:</string>
	<string name="app_version_tab">Application version:\t %s</string>
	<string name="lib_version_tab">Library version:\t\t\t %s</string>

	<string name="project_page">Project page:</string>
	<string name="license">License:</string>
	<string name="third_party_software">Third-party software</string>
	<string name="install_file">Install file</string>
	<string name="launch_daemon">Launch daemon</string>
	<string name="launch">Launch %s</string>

	<string name="start_daemon_error">An error occurred while starting the daemon. The daemon
		package might be faulty or the installation is broken.\n\nDetails:\t%s
	</string>
	<string name="start_daemon_script_error">The daemon startup script failed to run</string>
	<string name="app_name">DES-SERT</string>
	<string name="refresh_list">Refresh list</string>
	<string name="refresh_all">Refresh all</string>
	<string name="custom_command">Custom command</string>
	<string name="run_custom_command">Run custom command</string>
	<string name="telnet">Telnet</string>
	<string name="shutdown">Shutdown</string>
	<string name="kill">Kill</string>
	<string name="preferences">Preferences</string>
    <string name="select_daemon_zip_title_negative">SD card root directory:\nno daemon ZIP-files found</string>
	<string name="select_daemon_zip_title_positive">Select daemon ZIP-file</string>
	<string name="select_daemon_options_title">Select daemon options file</string>
	<string name="load">Load</string>
	<string name="save">Save</string>
	<string name="defaults">Defaults</string>
	<string name="no_sdcard_installed">No SD card mounted</string>
	<string name="install_progress_title">Installing daemon</string>
	<string name="install_progress_msg_download">Downloading daemon package&#8230;</string>
	<string name="install_daemon_success">Daemon installed successfully.</string>
	<string name="install_daemon_failure">Failure while installing daemon.</string>
	<string name="install_daemon_error">An error occurred while installing the daemon:\n%s</string>
	<string name="issued_shutdown_command">Issued shutdown command</string>
	<string name="issued_kill_command">Issued kill command</string>
	<string name="error_kill_command">An error occurred while issuing the kill command. Is the \&quot;kill\&quot; command properly configured?</string>
	<string name="uninstall_daemon">Uninstall daemon</string>
	<string name="uninstalled_daemon">Daemon successfully uninstalled</string>
	<string name="getting_repo_index">Retrieving repository index</string>
	<string name="getting_repo_error">An error occurred while retrieving the repository:\n%s</string>
	<string name="ask_install_daemon">Do you want to install the daemon %1$s %2$s from %3$s?</string>
	<string name="ask_restore_defaults">Do you want to the default options for this daemon?</string>
	<string name="ask_overwrite_file">The file already exists.\nDo you want to overwrite it?</string>
	<string name="target_directory">Target Directory:</string>
	<string name="target_file">Target File:</string>
	<string name="prepend_timestamp">Prepend Timestamp</string>
	<string name="choose_value">Choose Value</string>
	<string name="daemon_not_running">No daemon running.</string>
	<string name="daemon_running">Daemon running:</string>
	<string name="daemon_started">Daemon started</string>
	<string name="command_title">Command:</string>
	<string name="property_title">Property:</string>
	<string name="value_unknown">&lt;unknown&gt;</string>
	<string name="set_property">Set property: %s</string>
	<string name="run_command">Run command: %s</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="close">Close</string>
	<string name="ok">OK</string>
	<string name="execute">Execute</string>
	<string name="save_options_title">Save options file</string>
	<string name="command_progress_title">Running command</string>
	<string name="command_progress_message">Command: %s</string>
	<string name="command_results_title">Command results</string>
	<string name="command_results_done">DONE</string>
	<string name="command_aborted">A failure occurred while running the command</string>
	<string name="command_error">An error occurred while running the command</string>
	<string name="native_commands_not_found_title">Bad configuration</string>
	<string name="native_commands_not_found_msg">The following native commands could not be found. You
		should check your configuration:\n%s</string>
	<string name="native_command_not_found_title">Binary not found</string>
	<string name="native_command_not_found_msg">The native binary could not be found. You should check the
		value: %s</string>
	<string name="ignore">Ignore</string>
	<string name="install_start_script_error">%1$sAn error occurred while installing the daemon helper
		script:\n</string>
	<string name="install_libraries_success">Successfully installed the DES-SERT shared library files
	</string>
	<string name="install_libraries_failure">Installing the DES-SERT shared library files failed
	</string>
	<string name="install_libraries_error">%1$sAn error occurred while installing the DES-SERT shared
		library files:\n</string>

	<!-- setup strings -->
	<string name="setup_category_cli_title">CLI settings</string>
	<string name="setup_category_sysif_title">System interface settings</string>
	<string name="setup_category_meshif_title">Mesh interface settings</string>
	<string name="setup_category_repository_title">Repository settings</string>
	<string name="setup_category_path_title">System executable settings</string>

	<string name="setup_cliport_title">Change default CLI port</string>
	<string name="setup_cliport_summary">Port number to use for the CLI telnet interfaces (e.g.
		4519)</string>

	<string name="setup_sysif_title">Change system interface</string>
	<string name="setup_sysif_summary">System interface name to use (e.g. tap0)</string>

	<string name="setup_sysip_title">Change system IP number</string>
	<string name="setup_sysip_summary">IP number to use for the system interface (e.g.
		10.0.17.254)</string>

	<string name="setup_sysmask_title">Change system subnet mask</string>
	<string name="setup_sysmask_summary">Subnet mask number to use for the system interface (e.g.
		255.255.0.0)</string>

	<string name="setup_mtu_title">Change system MTU size</string>
	<string name="setup_mtu_summary">MTU size to use for the system interface (e.g. 1300)
	</string>

	<string name="setup_meshif_title">Change mesh interface</string>
	<string name="setup_meshif_summary">Mesh interface name to use (e.g. wlan0)</string>

	<string name="setup_repourl_title">Change repository URL</string>
	<string name="setup_repourl_summary">Daemon repository URL (e.g.
		http://www.example.net/repo/folder)</string>

	<string name="setup_pathsu_title">Change \&quot;su\&quot; command</string>
	<string name="setup_pathsu_summary">Path to \&quot;su\&quot; command (e.g. /system/bin/su)
	</string>

	<string name="setup_pathsh_title">Change \&quot;sh\&quot; command</string>
	<string name="setup_pathsh_summary">Path to \&quot;sh\&quot; command (e.g. /system/bin/sh)
	</string>

	<string name="setup_pathln_title">Change \&quot;ln\&quot; command</string>
	<string name="setup_pathln_summary">Path to \&quot;ln\&quot; command (e.g. /system/bin/ln)
	</string>

	<string name="setup_pathchmod_title">Change \&quot;chmod\&quot; command</string>
	<string name="setup_pathchmod_summary">Path to \&quot;chmod\&quot; command (e.g.
		/system/bin/chmod)</string>

	<string name="setup_pathkill_title">Change \&quot;kill\&quot; command</string>
	<string name="setup_pathkill_summary">Path to \&quot;kill\&quot; command (e.g. /system/bin/kill)
	</string>

<string name="local_service_started">Notification service</string>
<string name="exit">Exit</string>
</resources>
