<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group
        android:checkable="false"
        android:visible="true"
        android:enabled="true"
		android:id="@+id/DaemonGroup">
		<item
            android:checkable="false"
            android:visible="true"
            android:enabled="true"
			android:id="@+id/Refresh"
            android:title="@string/refresh_all" />
		<item
            android:checkable="false"
            android:visible="true"
            android:enabled="true"
			android:id="@+id/CustomCommand"
            android:title="@string/custom_command" />
		<item
            android:checkable="false"
            android:visible="true"
            android:enabled="true"
			android:id="@+id/Telnet"
            android:title="@string/telnet" />
		<item
            android:checkable="false"
            android:visible="true"
            android:enabled="true"
			android:id="@+id/Shutdown"
            android:title="@string/shutdown" />
		<item
            android:checkable="false"
            android:visible="true"
            android:enabled="true"
			android:id="@+id/Kill"
            android:title="@string/kill" />
	</group>
	<item
		android:checkable="false"
        android:visible="true"
        android:enabled="true"
		android:id="@+id/Preferences"
        android:title="@string/preferences" />
	<item
		android:checkable="false"
        android:visible="true"
        android:enabled="true"
		android:id="@+id/About"
        android:title="@string/about" />
	<item
		android:id="@+id/Exit"
		android:title="@string/exit"
		android:visible="true"
		android:checkable="false"
		android:enabled="true" />
</menu>
