<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:id="@+id/ContentLayout"
    android:padding="5dp">
	<LinearLayout
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:orientation="vertical">
		<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:text="@string/target_directory"
            android:textAppearance="?android:attr/textAppearanceLarge" />
		<EditText
            android:layout_height="wrap_content"
            android:text="@string/target_directory_path"
			android:layout_width="match_parent"
            android:inputType="text"
			android:id="@+id/TargetDirectoryText" />
		<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:text="@string/target_file"
            android:textAppearance="?android:attr/textAppearanceLarge" />
		<EditText
            android:layout_height="wrap_content"
            android:text="@string/target_file_name"
			android:layout_width="match_parent"
            android:inputType="text" android:id="@+id/TargetFileText" />
		<CheckBox
			android:id="@+id/TimestampCheckBox"
            android:layout_width="match_parent"
			android:layout_height="wrap_content"
            android:checked="true"
			android:text="@string/prepend_timestamp" />
		<Button
			android:layout_height="wrap_content"
            android:layout_gravity="center"
			android:layout_marginTop="12dp"
            android:id="@+id/SaveButton"
            android:text="@string/save"
			android:width="150dp"
            android:layout_width="wrap_content" />
	</LinearLayout>
</ScrollView>
