<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android">
	<item
        android:checkable="false"
        android:visible="true"
        android:enabled="true"
		android:id="@+id/Refresh"
        android:title="@string/refresh_list"
        android:icon="@android:drawable/ic_menu_rotate" />
	<item
        android:checkable="false"
        android:visible="true"
        android:enabled="true"
		android:id="@+id/Preferences"
        android:title="@string/preferences"
		android:icon="@android:drawable/ic_menu_preferences" />
	<item
        android:checkable="false"
        android:visible="true"
        android:enabled="true"
		android:id="@+id/About"
        android:title="@string/about"
        android:icon="@android:drawable/ic_menu_info_details"/>
    <item
        android:id="@+id/Exit"
        android:title="@string/exit"
        android:visible="true"
        android:checkable="false"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
</menu>
