<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:orientation="vertical" android:id="@+id/ContentLayout" android:padding="5dip">
	<LinearLayout android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent"
		android:scrollbars="vertical">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/target_file"
			android:textAppearance="?android:attr/textAppearanceLarge" />
		<EditText android:layout_height="wrap_content" android:text="@string/target_file_path" android:layout_width="fill_parent"
			android:inputType="text" android:id="@+id/TargetFileText"/>
	</LinearLayout>
	<Button android:layout_height="wrap_content" android:layout_gravity="center" android:layout_marginTop="12dip" android:id="@+id/SaveButton" android:text="@string/save" android:width="150dip" android:layout_width="wrap_content"/>
</LinearLayout>
