<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
	android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="5dp">
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/property_title"
		android:textAppearance="?android:attr/textAppearanceSmall" />
	<LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
		<TextView
            android:id="@+id/Description"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:typeface="serif"
			android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />
		<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/QueryingMarker"
			android:adjustViewBounds="true"
            android:layout_gravity="end"
            android:scaleType="fitXY"
			android:src="@android:drawable/stat_notify_sync"
            android:layout_weight="0"
            android:maxHeight="25dp"
			android:contentDescription="@string/none"
            android:maxWidth="25dp"
            android:minHeight="25dp"
            android:minWidth="25dp"/>
		<ImageView
            android:id="@+id/SetterMarker"
            android:layout_width="wrap_content"
            android:scaleType="fitXY"
			android:contentDescription="@string/none"
            android:layout_height="wrap_content"
			android:adjustViewBounds="true"
            android:layout_gravity="end"
            android:layout_weight="0"
			android:src="@android:drawable/ic_menu_manage"
            android:maxHeight="25dp"
            android:maxWidth="25dp"/>
	</LinearLayout>
	<TextView
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_unknown"
		android:id="@+id/ValueField"
        android:typeface="monospace"
        android:textSize="12sp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</LinearLayout>
